--- a/home.css
+++ b/home.css
@@ -133,3 +133,35 @@ button.btn.btn-light.btnstudy1:hover{
     
 }
 
+/* Footer */
+.footer-menu{
+    font-size: 15px;
+    font-weight: 450px;
+    margin-right: 15px;
+    color: whitesmoke;
+}
+#footer-small{  
+    color: white;
+    margin: auto;
+}
+.social-icon {
+    width: 40px;
+    background-color: whitesmoke;
+    border-radius: 100px;
+    border: 1px solid whitesmoke;
+    margin: 0 10px;
+}
+#social-icon-bar{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    margin: 0;
+}
+@media only screen and (max-width:900px) {
+    #social-icon-bar{
+        display: flex;
+        flex-direction: row;
+        padding-top: 25px;
+        margin: auto;
+    }
+}
+
