--- a/subject-page.css
+++ b/subject-page.css
@@ -31,9 +31,15 @@ a:any-link{
     grid-template-columns: repeat(6,1fr);
     margin: 0;
 }
+.footer-menu, #footer-small,.social-icon,#social-icon-bar{
+    margin-left: 30px;
+}
 
 /* Media Query */
 @media only screen and (max-width:900px) {
+    .footer-menu, #footer-small,.social-icon,#social-icon-bar{
+        margin-left: 10px;
+    }
     #social-icon-bar{
         display: flex;
         flex-direction: row;
