--- a/single-university-page.css
+++ b/single-university-page.css
@@ -203,9 +203,7 @@ button.btn.btn-light.btnstudy1:hover {
         border-radius: calc(1.125rem);
         font-size: 0.875rem;
     }  
-    .features-university{
-        display: none;
-    }
+    
 }
 
 /* Progress Bar */
@@ -268,8 +266,12 @@ button.btn.btn-light.btnstudy1:hover {
         padding-top: 25px;
         margin: auto;
     }
+    .features-university{
+        /* display: none; */
+    }
 }
 
 .row{
     --bs-gutter-x: 0!important;
 }
+
