--- a/home.css
+++ b/home.css
@@ -20,7 +20,7 @@ body{
 .main-body{
     padding-left: 5px;
     padding-right: 5px;
-    overflow: hidden;
+    margin-bottom: 40px;
 }
 #rank-School{
     border: 1px solid green;
