--- a/single-university-page.css
+++ b/single-university-page.css
@@ -7,14 +7,15 @@ a:any-link {
     text-decoration: none;
     z-index: 1;
 }
-.varsityPage{
+/* .varsityPage{
   box-shadow: 8px 8px 8px 5px rgb(224, 224, 224);
-}
+} */
 .Banner{
     position: relative;
 }
 .BannerImg{
     max-width: 100%;
+    height: 500px;
 }
 .underImage{
     height: 81px;
@@ -173,7 +174,12 @@ button.btn.btn-light.btnstudy1:hover {
 
 /* Media Query for Small Devices */
 /** For  Mobile View **/
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 991px) {
+    .Banner img{
+        width: 100%;
+        height: 220px;
+    }
+    
     ul{
         display: grid;
         grid-template-columns: repeat(2,1fr);
@@ -185,10 +191,6 @@ button.btn.btn-light.btnstudy1:hover {
         border-right: 0;
         padding-left: 0;
         line-height: 25px;
-    }
-    .faceImg{
-        padding-top: 54px;
-        margin-left: 5px;
     }
     .filter_page2{
         display: flex;
