--- a/single-university-page.css
+++ b/single-university-page.css
@@ -7,6 +7,9 @@ a:any-link {
     text-decoration: none;
     z-index: 1;
 }
+p{
+    text-align: justify;
+}
 /* .varsityPage{
   box-shadow: 8px 8px 8px 5px rgb(224, 224, 224);
 } */
