--- a/single-university-page.css
+++ b/single-university-page.css
@@ -237,7 +237,14 @@ button.btn.btn-light.btnstudy1:hover {
 .accordionEdit{
     padding-top: 6px;
 }
-
+/* Pagination */
+#pagination{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
 /* Footer */
 .footer-menu{
