--- a/single-university-page.css
+++ b/single-university-page.css
@@ -2,17 +2,24 @@
     margin: 0;
     padding: 0;
 }
+
 a:any-link {
     cursor: pointer;
     text-decoration: none;
-    z-index: 1;
+    /* z-index: 1; */
 }
+
+a:any-link:hover{
+    text-decoration: underline;
+}
+
 p{
     text-align: justify;
 }
-/* .varsityPage{
-  box-shadow: 8px 8px 8px 5px rgb(224, 224, 224);
-} */
+.varsityPage{
+
+    box-shadow: 8px 8px 8px 5px rgb(224, 224, 224);
+}
 .Banner{
     position: relative;
 }
@@ -33,7 +40,7 @@ p{
     border: 1px solid #e4e3e5;
 }
 .university_details{
-   padding: 60px 16px 12px;
+   padding: 60px 16px 40px;
 }
 .logoimage{
     height: 20px; 
