--- a/subject-page.css
+++ b/subject-page.css
@@ -8,12 +8,25 @@ a:any-link{
     text-decoration: none;
 }
 
+a:any-link:hover{
+    text-decoration: underline;
+}
+
 main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+/* Pagination */
+#pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 /* Footer */
