--- a/home.css
+++ b/home.css
@@ -61,9 +61,9 @@ button.btn.btn-light.btnstudy1:hover{
     display: none;
 }
 
-#feature-universities{
-    /* border: 1px solid green; */
-    margin: 15px 15px 20px;
+.feature-universities{
+    margin-top: 20px;
+    margin-bottom: 20px;
     box-shadow: 8px 8px 8px 1px rgb(148, 156, 135);
 }
 
@@ -146,13 +146,14 @@ button.btn.btn-light.btnstudy1:hover{
     .row{
         --bs-gutter-x:0 !important;
     }
-    #feature-universities{
+    .feature-universities{
         /* margin: 20px; */
+        
+        border: 1px solid green;
         margin-top: 15px;
         margin-bottom: 25px;
         margin-left: 5px;
         margin-right: 5px;
-        border: 1px solid green;
     }
     #social-icon-bar{
         display: flex;
