--- a/search-university.css
+++ b/search-university.css
@@ -41,8 +41,10 @@ header{
     background-color: whitesmoke;
     z-index: 1;
 }
+
+/* Footer */
 .footer-menu{
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 450px;
     margin-right: 15px;
     color: whitesmoke;
@@ -63,6 +65,7 @@ header{
     grid-template-columns: repeat(6,1fr);
     margin: 0;
 }
+
 
 /* Media Query */
 @media only screen and (max-width:900px) {
